Add configuraition to disribute README.md

--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,12 @@ test {
     // Use junit platform for unit tests
     useJUnitPlatform()
 }
+
+distributions {
+    main {
+        contents {
+            from 'README.md'
+        }
+    }
+}
+
